[ADDED] add sector icon
Former-commit-id: ac1ddf00a86ae8d05429a076ca521a0de5c9805b

--- a/easyicon/platform/msvc2008/projects/libicon.vcproj
+++ b/easyicon/platform/msvc2008/projects/libicon.vcproj
@@ -244,6 +244,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libicon\ChangedSectorIcon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\ChangedSectorIcon.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libicon\Icon.cpp"
 					>
 				</File>
@@ -265,14 +273,6 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\libicon\RectIcon.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libicon\SectorIcon.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libicon\SectorIcon.h"
 					>
 				</File>
 				<Filter
