[FIXED] eicon的changed-sector
Former-commit-id: 754003f9f36b1fe98c3aee9c232420e365b2afc9

--- a/easyicon/platform/msvc2008/projects/libicon.vcproj
+++ b/easyicon/platform/msvc2008/projects/libicon.vcproj
@@ -309,6 +309,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libicon\EditChangedSectorOP.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libicon\EditChangedSectorOP.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libicon\EditRectOP.cpp"
 				>
 			</File>
