[ADDED] 加载action信息到group里面
Former-commit-id: 10fca145b54f40ade4bc1a33c67c9f7eb4ba6a1c

--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -229,6 +229,14 @@
 			RelativePath="..\..\..\src\libcoco\SymbolDependanceSorter.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\Utility.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\Utility.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
