--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1425,6 +1425,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\StringTools.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\common\StringTools.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\tools.h"
 					>
 				</File>
