[CHANGED] 用d2d的slider重构particle3d
Former-commit-id: 37de91b388131679d7b8ab80f5d97e763511d2cb

--- a/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -172,11 +172,19 @@
 				Name="ps"
 				>
 				<File
+					RelativePath="..\..\..\src\libparticle3d\item_string.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libparticle3d\ParticleSystem.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\..\src\libparticle3d\ParticleSystem.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle3d\ps_config.h"
 					>
 				</File>
 			</Filter>
