--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1819,6 +1819,14 @@
 						Name="base"
 						>
 						<File
+							RelativePath="..\..\..\src\drag2d\view\FBOCanvas.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\view\FBOCanvas.h"
+							>
+						</File>
+						<File
 							RelativePath="..\..\..\src\drag2d\view\GLCanvas.cpp"
 							>
 						</File>
