[ADDED] blend shader
Former-commit-id: 8014b0692dccc31dc85b9fb8e1a67b2b7ef27c11

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1259,6 +1259,10 @@
 							>
 						</File>
 						<File
+							RelativePath="..\..\..\src\drag2d\render\BlendShader.frag"
+							>
+						</File>
+						<File
 							RelativePath="..\..\..\src\drag2d\render\BlendShader.h"
 							>
 						</File>
