[ADDED] property里加上设置blend mode
Former-commit-id: 15a73f9c63e6935abbed96eabe9ba01d4abfb0f2

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1255,6 +1255,14 @@
 						Name="blend"
 						>
 						<File
+							RelativePath="..\..\..\src\drag2d\render\BlendModes.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\render\BlendModes.h"
+							>
+						</File>
+						<File
 							RelativePath="..\..\..\src\drag2d\render\BlendShader.cpp"
 							>
 						</File>
