[CHANGED] 重构snapshoot，提取出来fbo
Former-commit-id: 5f721e02e1b8f0b0b32eafb794980ef7a10e415d

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -553,14 +553,6 @@
 		<Filter
 			Name="dataset"
 			>
-			<File
-				RelativePath="..\..\..\src\drag2d\dataset\Snapshoot.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\dataset\Snapshoot.h"
-				>
-			</File>
 			<Filter
 				Name="primitive"
 				>
@@ -1288,6 +1280,26 @@
 						</File>
 					</Filter>
 				</Filter>
+			</Filter>
+			<Filter
+				Name="utility"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\FBO.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\FBO.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\Snapshoot.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\Snapshoot.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
