--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1065,11 +1065,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\render\SpriteDraw.cpp"
+					RelativePath="..\..\..\src\drag2d\render\SpriteRenderer.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\render\SpriteDraw.h"
+					RelativePath="..\..\..\src\drag2d\render\SpriteRenderer.h"
 					>
 				</File>
 			</Filter>
@@ -1290,6 +1290,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\render\FBO.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\ScreenFBO.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\ScreenFBO.h"
 					>
 				</File>
 				<File
