[FIXED] blend shader
Former-commit-id: 4aa9cdbdcf7c8af99203dce6b5a33cab515b046d

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1266,6 +1266,10 @@
 							RelativePath="..\..\..\src\drag2d\render\BlendShader.h"
 							>
 						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\render\BlendShader.vert"
+							>
+						</File>
 					</Filter>
 					<Filter
 						Name="screen"
