[ADDED] shadow io & rename JsonTools
Former-commit-id: fa7e99a7fc76511586d934b7451e33de6500de76

--- a/easyshadow/platform/msvc2008/projects/libshadow.vcproj
+++ b/easyshadow/platform/msvc2008/projects/libshadow.vcproj
@@ -229,6 +229,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="frame"
+			>
+			<File
+				RelativePath="..\..\..\src\libshadow\FileIO.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libshadow\FileIO.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libshadow\config.h"
 			>
