--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1505,11 +1505,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\common\JsonTools.cpp"
+					RelativePath="..\..\..\src\drag2d\common\JsonIO.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\common\JsonTools.h"
+					RelativePath="..\..\..\src\drag2d\common\JsonIO.h"
 					>
 				</File>
 				<File
