[ADDED] ViewPanelMgr，会改变多个界面的操作（选择），应该统一管理，不要一个传给另一个
Former-commit-id: ac85a0db63e1affbd5d18bf4a3afe67c9adb61d5

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2249,6 +2249,22 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="base"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\IViewPanel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\ViewPanelMgr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\ViewPanelMgr.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="widget"
