--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyshadow\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyshadow\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
