[ADDED] eshadow的双击打开
Former-commit-id: 53b8f82e58ec7fd93f42c9ddcf232cb0ce1926c4

--- a/easyshadow/platform/msvc2008/projects/libshadow.vcproj
+++ b/easyshadow/platform/msvc2008/projects/libshadow.vcproj
@@ -233,6 +233,14 @@
 			Name="frame"
 			>
 			<File
+				RelativePath="..\..\..\src\libshadow\EditDialog.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libshadow\EditDialog.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libshadow\FileIO.cpp"
 				>
 			</File>
