[ADDED] 工具栏切换层
Former-commit-id: 483c9a1b782301054a4a39f97dee8f1bd6d78c82

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -237,6 +237,14 @@
 				RelativePath="..\..\..\src\lr\frame\Task.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\lr\frame\ToolBar.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\lr\frame\ToolBar.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="view"
@@ -462,6 +470,10 @@
 				</File>
 			</Filter>
 		</Filter>
+		<File
+			RelativePath=".\lr.rc"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
