--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -200,6 +200,14 @@
 					Name="sprite"
 					>
 					<File
+						RelativePath="..\..\..\src\drag2d\operator\CopyPasteSpriteState.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\operator\CopyPasteSpriteState.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\drag2d\operator\IArrangeSpriteState.h"
 						>
 					</File>
