[FIXED] 切换library page时调用active
Former-commit-id: 2d3d79c1bb78e1aee0923117b7a314b295dc1e91

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -473,6 +473,22 @@
 		<File
 			RelativePath="..\..\..\res\rc\lr.rc"
 			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
 		</File>
 	</Files>
 	<Globals>
