[FIXED] project's rc
Former-commit-id: 5186dfa8eea6369359f704b110b337bfa8c8201e

--- a/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
@@ -190,10 +190,6 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\..\easybuilder\platform\msvc2008\ebuilder.rc"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\src\easycomplex\FileIO.cpp"
 			>
 		</File>
@@ -224,6 +220,26 @@
 		<File
 			RelativePath="..\..\..\src\easycomplex\Task.h"
 			>
+		</File>
+		<File
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
+			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
 		</File>
 	</Files>
 	<Globals>
