--- a/easypacker/platform/msvc2008/projects/easypacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/easypacker.vcproj
@@ -399,8 +399,24 @@
 			</Filter>
 		</Filter>
 		<File
-			RelativePath="..\..\..\..\easybuilder\platform\msvc2008\ebuilder.rc"
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
 			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>			
 		</File>
 	</Files>
 	<Globals>
