--- a/easyshape/platform/msvc2008/projects/easyshape_new.vcproj
+++ b/easyshape/platform/msvc2008/projects/easyshape_new.vcproj
@@ -200,6 +200,22 @@
 		<File
 			RelativePath="..\..\..\..\editor-external\wx\include\wx.rc"
 			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>			
 		</File>
 	</Files>
 	<Globals>
