--- a/coceditor/platform/msvc2008/projects/cocpackage.vcproj
+++ b/coceditor/platform/msvc2008/projects/cocpackage.vcproj
@@ -185,6 +185,26 @@
 			RelativePath="..\..\..\src\cocpackage\main.cpp"
 			>
 		</File>
+		<File
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
+			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>			
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
