--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -594,12 +594,28 @@
 			</Filter>
 		</Filter>
 		<File
-			RelativePath="..\..\..\..\easybuilder\platform\msvc2008\ebuilder.rc"
+			RelativePath="..\..\..\src\easyanimation\frame\Widgets.h"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\easyanimation\frame\Widgets.h"
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
 			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
 		</File>
 	</Files>
 	<Globals>
