--- a/easyejoy2d/platform/msvc2008/projects/easyejoy2d.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/easyejoy2d.vcproj
@@ -217,6 +217,26 @@
 			RelativePath="..\..\..\src\easyejoy2d\config.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
+			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>			
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
