--- a/easytexture/platform/msvc2008/projects/easytexture.vcproj
+++ b/easytexture/platform/msvc2008/projects/easytexture.vcproj
@@ -198,6 +198,26 @@
 			RelativePath="..\..\..\src\easytexture\Task.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
+			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>			
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
