[ADDED] 边缘检测和浮雕特效
Former-commit-id: acf70e65fdd16f2723e4f525762d36a1e1b6996d

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -280,6 +280,46 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="edge detection"
+				>
+				<File
+					RelativePath="..\..\..\src\libimage\EdgeDetectionShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\EdgeDetectionShader.frag"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\EdgeDetectionShader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\EdgeDetectionShader.vert"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="relief"
+				>
+				<File
+					RelativePath="..\..\..\src\libimage\ReliefShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\ReliefShader.frag"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\ReliefShader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\ReliefShader.vert"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="process"
